# candles-rs

./: Cargo.toml  README.md  rustfmt.toml  setup-hooks.sh
.github/hooks/: pre-commit
src/: connections.rs  errors.rs  lib.rs  types.rs  utils.rs
src/binance/: __test__.rs  main.rs
src/bingx/: __test__.rs  main.rs
src/blofin/: __test__.rs  main.rs
src/bybit/: __test__.rs  main.rs  types.rs
src/htx/: __test__.rs  main.rs  types.rs
src/mexc/: __test__.rs  main.rs
src/modules/: chains.rs  mod.rs  pairs.rs
src/modules/address/: __test__.rs  main.rs  mod.rs
src/modules/address/ethereum/: __test__.rs  main.rs
src/modules/address/solana/: main.rs
src/okx/: __test__.rs  main.rs
src/providers/: base.rs  mod.rs
src/providers/binance/: __test__.rs  main.rs
src/providers/bingx/: __test__.rs  main.rs
src/providers/blofin/: __test__.rs  main.rs
src/providers/bybit/: __test__.rs  main.rs
src/providers/coingecko/: __test__.rs  main.rs  types.rs
src/providers/htx/: __test__.rs  main.rs
src/providers/mexc/: __test__.rs  main.rs  types.rs
src/providers/moralis/: __test__.rs  main.rs  types.rs
src/providers/okx/: __test__.rs  main.rs
src/providers/uniswap_v3/: __test__.rs  main.rs  types.rs
src/uniswap_v3/: __test__.rs  main.rs  types.rs
