[package]
name = "candles-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
reqwest = { version = "0.12.23", features = ["json"] }
serde = { version = "1.0.227", features = ["derive"] }
serde_json = "1.0.145"
strum = { version = "0.27.2", features = ["derive"] }
thiserror = "2.0.16"

[dev-dependencies]
tokio = { version = "1.47.1", features = ["rt", "macros"] }
