[package]
name = "candles-rs"
version = "0.1.5"
edition = "2024"
license = "MIT"
authors = ["Onik Sahakyan <os@flicker.finance|onik.sahakyan.09@gmail.com>"]
description = "A Rust library for fetching candlestick (OHLCV) data from multiple cryptocurrency exchanges (Binance, OKX, Bybit, BloFin, BingX, HTX, MEXC) and decentralized exchanges (Uniswap V3 via RPC)."
repository = "https://github.com/Flicker-Finance/candles-rs"
documentation = "https://docs.rs/candles-rs"
readme = "README.md"
keywords = ["cryptocurrency", "trading", "candles", "ohlcv", "defi"]
categories = ["finance", "api-bindings"]
exclude = ["tests/*", "examples/*", ".github/*"]
rust-version = "1.85.0"

[dependencies]
async-trait = "0.1.89"
chrono = "0.4.42"
reqwest = { version = "0.12.23", features = ["json"] }
serde = { version = "1.0.227", features = ["derive"] }
serde_json = "1.0.145"
strum = { version = "0.27.2", features = ["derive"] }
thiserror = "2.0.16"
alloy = { version = "0.8", features = [
    "provider-http",
    "rpc-types-eth",
    "contract",
] }
tokio = { version = "1.47.1", features = ["time", "rt", "macros"] }
